--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,7 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:3.15'
     testImplementation 'org.mockito:mockito-core:2.21.0'
 }
+
+test {
+    testLogging.showStandardStreams = true
+}
