--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,24 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.fasterxml:jackson-module-json-org:0.9.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-    implementation 'org.apache.poi:poi:3.1.5'
-    implementation 'org.apache.poi:poi-ooxml:3.15'
+    compile 'com.fasterxml:jackson-module-json-org:0.9.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    compile 'org.apache.poi:poi:4.1.2'
+    compile 'org.apache.poi:poi-ooxml:4.1.2'
     testImplementation 'org.mockito:mockito-core:2.21.0'
 }
 
 test {
     testLogging.showStandardStreams = true
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.mikesterry.Main'
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
